maven-staxer-plugin: module renamed to staxer-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <modules>
         <module>util</module>
         <module>staxer</module>
-        <module>maven-staxer-plugin</module>
+        <module>staxer-maven-plugin</module>
     </modules>
 
     <build>
