--- a/staxer-maven-plugin/pom.xml
+++ b/staxer-maven-plugin/pom.xml
@@ -8,7 +8,7 @@
         <groupId>staxer</groupId>
         <version>1.1</version>
     </parent>
-    <artifactId>maven-staxer-plugin</artifactId>
+    <artifactId>staxer-maven-plugin</artifactId>
     <version>1.1</version>
     <packaging>maven-plugin</packaging>
     <name>Staxer Mojo for Maven</name>
