--- a/staxer-sample-common/pom.xml
+++ b/staxer-sample-common/pom.xml
@@ -57,7 +57,7 @@
                                 <phase>generate-sources</phase>
                                 <configuration>
                                     <wsdlUrl>/src/main/resources/staxerSample.wsdl</wsdlUrl>
-                                    <packageName>staxer.test</packageName>
+                                    <packageName>staxer.sample.test</packageName>
                                     <sourceDir>/src/main/java</sourceDir>
                                     <createClientService>true</createClientService>
                                     <createServerService>true</createServerService>
