--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,19 @@
     <version>1.1</version>
     <name>Staxer parent project</name>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <staxer.version>1.1</staxer.version>
+    </properties>
+
     <modules>
         <module>util</module>
         <module>staxer-core</module>
         <module>staxer-maven-plugin</module>
         <module>staxer-sample-common</module>
+        <module>initer</module>
+        <module>staxer-sample-server</module>
     </modules>
 
     <build>
@@ -25,15 +33,6 @@
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
         </plugins>
@@ -102,10 +101,6 @@
         <repository>
             <id>ibiblio</id>
             <url>http://mirrors.ibiblio.org/pub/mirrors/maven2</url>
-        </repository>
-        <repository>
-            <id>jboss</id>
-            <url>http://repository.jboss.org/maven2</url>
         </repository>
     </repositories>
 
