staxer-sample-client added

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>staxer-sample-common</module>
         <module>igniter</module>
         <module>staxer-sample-server</module>
+        <module>staxer-sample-client</module>
     </modules>
 
     <build>
