--- a/staxer-sample-server/pom.xml
+++ b/staxer-sample-server/pom.xml
@@ -1,69 +1,49 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>staxer</groupId>
+        <groupId>org.staxer</groupId>
         <artifactId>staxer</artifactId>
         <version>1.1</version>
     </parent>
     <artifactId>staxer-sample-server</artifactId>
-    <version>${staxer.version}</version>
-    <name>Staxer sample server</name>
     <packaging>war</packaging>
-
+    <name>Staxer sample server</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
-
     <dependencies>
-
         <dependency>
-            <groupId>staxer</groupId>
+            <groupId>org.staxer</groupId>
             <artifactId>staxer-util</artifactId>
-            <version>${staxer.version}</version>
         </dependency>
-
         <dependency>
-            <groupId>staxer</groupId>
+            <groupId>org.staxer</groupId>
             <artifactId>staxer-sample-common</artifactId>
-            <version>${staxer.version}</version>
         </dependency>
-
         <dependency>
-            <groupId>staxer</groupId>
+            <groupId>org.staxer</groupId>
             <artifactId>igniter</artifactId>
-            <version>1.0</version>
         </dependency>
-
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-            <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
-            <version>2.1</version>
-            <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>1.5</version>
         </dependency>
-
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>ST4</artifactId>
-            <version>4.0.4</version>
-            <type>jar</type>
         </dependency>
-
     </dependencies>
-
 </project>
 
