--- a/igniter/pom.xml
+++ b/igniter/pom.xml
@@ -1,71 +1,45 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
+        <groupId>org.staxer</groupId>
         <artifactId>staxer</artifactId>
-        <groupId>staxer</groupId>
         <version>1.1</version>
     </parent>
     <artifactId>igniter</artifactId>
     <packaging>jar</packaging>
-    <version>1.0</version>
     <name>App initialization helper module</name>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
-
     <dependencies>
-
         <dependency>
-            <groupId>staxer</groupId>
+            <groupId>org.staxer</groupId>
             <artifactId>staxer-util</artifactId>
-            <version>${staxer.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
-            <version>3.0.5.RELEASE</version>
         </dependency>
-
         <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
         </dependency>
-
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-            <scope>provided</scope>
         </dependency>
-
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
     <profiles>
         <profile>
             <id>log4jXsdBeans</id>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>staxer</groupId>
+                        <groupId>org.staxer</groupId>
                         <artifactId>staxer-maven-plugin</artifactId>
                         <version>1.1</version>
                         <executions>
@@ -91,7 +65,7 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>staxer</groupId>
+                        <groupId>org.staxer</groupId>
                         <artifactId>staxer-maven-plugin</artifactId>
                         <version>1.1</version>
                         <executions>
@@ -113,5 +87,4 @@
             </build>
         </profile>
     </profiles>
-
 </project>
