--- a/staxer-sample-common/pom.xml
+++ b/staxer-sample-common/pom.xml
@@ -1,51 +1,37 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
+        <groupId>org.staxer</groupId>
         <artifactId>staxer</artifactId>
-        <groupId>staxer</groupId>
         <version>1.1</version>
     </parent>
     <artifactId>staxer-sample-common</artifactId>
     <packaging>jar</packaging>
-    <version>${staxer.version}</version>
     <name>Staxer sample common</name>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
-
     <dependencies>
-
         <dependency>
-            <groupId>staxer</groupId>
+            <groupId>org.staxer</groupId>
             <artifactId>staxer-util</artifactId>
-            <version>1.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
     <profiles>
         <profile>
             <id>staxerSampleWsBeans</id>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>staxer</groupId>
+                        <groupId>org.staxer</groupId>
                         <artifactId>staxer-maven-plugin</artifactId>
                         <version>1.1</version>
                         <executions>
@@ -69,5 +55,4 @@
             </build>
         </profile>
     </profiles>
-
 </project>
