--- a/staxer-sample-server/pom.xml
+++ b/staxer-sample-server/pom.xml
@@ -26,7 +26,7 @@
         </dependency>
         <dependency>
             <groupId>org.staxer</groupId>
-            <artifactId>igniter</artifactId>
+            <artifactId>staxer-igniter</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
